# arvore-binaria

./: README.md
arvore-binaria-avl/: Aluno.c  ArvoreAvl.c  ArvoreBinaria.c  CMakeLists.txt  ControleArquivoAluno.c  FuncaoUtils.c  Node.c  main.c
arvore-binaria-avl-simplificada/: Aluno.c  ArvoreAvl.c  ArvoreBinaria.c  ControleArquivoAluno.c  FuncaoUtils.c  Makefile  Node.c  main.c
arvore-binaria-avl-simplificada/headers/: Aluno.h  ArvoreAvl.h  ControleArquivoAluno.h  Node.h
arvore-binaria-avl/headers/: ArvoreBinaria.h  ControleArquivoAluno.h  FuncaoUtils.h  Node.h
arvore-binaria-avl/saida/: saida-Clone.txt
